--- a/contatos.html
+++ b/contatos.html
@@ -72,14 +72,14 @@
     <tr>
       <td>
         <figure>
-          <img src="imagens/Cede.jpg" alt="Sede principal da TransAngola Express" width="400">
+          <img src="imagens/Cede2.jpg" alt="Sede principal da TransAngola Express" width="400">
           <figcaption>Sede da TransAngola Express</figcaption><br>
           
         </figure>
       </td>
       <td>
         <figure>
-          <img src="imagens/Cede2.jpg" alt="Vista lateral da sede" width="300">
+          <img src="imagens/Cede.jpg" alt="Vista lateral da sede" width="300">
           <figcaption> Vista lateral da sede</figcaption>
         </figure>
       </td>
