--- a/contatos.html
+++ b/contatos.html
@@ -72,18 +72,10 @@
     <tr>
       <td>
         <figure>
-          <img src="imagens/Cede2.jpg" alt="Sede principal da TransAngola Express" width="400">
+          <img src="imagens/Cede.jpg" alt="Sede principal da TransAngola Express" width="400">
           <figcaption>Sede da TransAngola Express</figcaption><br>
-          
         </figure>
       </td>
-      <td>
-        <figure>
-          <img src="imagens/Cede.jpg" alt="Vista lateral da sede" width="300">
-          <figcaption> Vista lateral da sede</figcaption>
-        </figure>
-      </td>
-    </tr>
   </table>
    <ul><a href="https://maps.app.goo.gl/Lx8jNSNteKzKZitKA"><img src="imagens/images.png" alt="" width="40"></a></ul>
 </section>
